--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <junit.version>4.12</junit.version>
     </properties>
     <build>
+    <!--hej!-->
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
