Added comment hej2222

--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
         <junit.version>4.12</junit.version>
     </properties>
     <build>
-    <!--hej!-->
+    <!--hej!2222-->
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
